refactor(Aluno): adicionar interface para melhorar o desacoplamento